[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/CardBase.gd" type="Script" id=1]
[ext_resource path="res://assets/cartas/card_based_2.png" type="Texture" id=2]
[ext_resource path="res://assets/local/forest_1.png" type="Texture" id=3]
[ext_resource path="res://assets/Alkhemikal.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/cartas/joias_1.png" type="Texture" id=5]
[ext_resource path="res://assets/cartas/progress_bar_bg.png" type="Texture" id=6]
[ext_resource path="res://assets/cartas/progress_bar_pg2.png" type="Texture" id=7]
[ext_resource path="res://assets/cartas/progress_bar_pg.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29, 46 )

[node name="CardBase" type="RigidBody2D"]
input_pickable = true
mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ImageType" type="Sprite" parent="Sprite"]
position = Vector2( 0, -5 )
texture = ExtResource( 3 )

[node name="NameType" type="Label" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -18.0
margin_top = -47.0
margin_right = 54.0
margin_bottom = -31.0
rect_scale = Vector2( 0.5, 0.45 )
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "Local"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="CristalMini" type="Sprite" parent="Sprite"]
position = Vector2( 0, -38 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CristalBig" type="Sprite" parent="Sprite"]
position = Vector2( 0, 25 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 16, 16, 16 )

[node name="NameDesc" type="Label" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.228
anchor_top = 0.81
anchor_right = 0.771
anchor_bottom = 0.938
margin_left = -48.8
margin_top = -50.0
margin_right = 2.89999
margin_bottom = -48.8
rect_scale = Vector2( 0.5, 0.9 )
custom_fonts/font = SubResource( 2 )
text = "floresta"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="TextureProgressGoal" type="TextureProgress" parent="Sprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -98.0
margin_right = -20.0
margin_bottom = -86.0
step = 5.0
value = 20.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true

[node name="TextureProgressItem" type="TextureProgress" parent="Sprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -98.0
margin_right = -70.0
margin_bottom = -86.0
step = 5.0
value = 40.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 8 )
fill_mode = 3
nine_patch_stretch = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 3 )
[connection signal="mouse_entered" from="." to="." method="_on_CardBase_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CardBase_mouse_exited"]
